--- a/app/views/user/_profile_show.html.erb
+++ b/app/views/user/_profile_show.html.erb
@@ -62,7 +62,7 @@
       <%= link_to "Izmeni podatke", user_profile_edit_path(@user) %>
     </div>
   <% end %>
-  <% if policy(@user).user_donations? %>
+  <% if policy(@user).user_donations? and not @user.donor? %>
     <div class="row">
       <%= link_to "Pregledaj donacije", user_donations_path(@user) %>
     </div>
