--- a/app/views/index/_donor_list.html.erb
+++ b/app/views/index/_donor_list.html.erb
@@ -10,7 +10,7 @@
                 <a <%= current_user ? "href=#{user_profile_path(donor)}" : '' %> class="list-group-item <%= 'no-hover' unless current_user %>">
                   <div>
                     <h4 class="list-group-item-heading"><%= donor.full_name %><span class="pull-right"><%= donor.donation_number %></span></h4>
-                    <p class="list-group-item-text"><%= donor.blood_type_full %> &nbsp;<small><%= donor.birth_date %></small></p>
+                    <p class="list-group-item-text"><%= donor.blood_type_full %> &nbsp;<small><%= donor.birth_date %></small> <small>član od: <%= donor.registered_since %></small></p>
                   </div>
                 </a>
               <% end %>
